# cursorpipe

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  README.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docker-v2.yml  docs.yml
api-reference/: index.html
architecture/: index.html
configuration/: index.html
cursor-api-key/: index.html
cursorpipe/: __init__.py  _acp.py  _client.py  _compat.py  _config.py  _errors.py  _json.py  _models.py  _ndjson.py  _pool.py  _resolve.py  _session.py  _subprocess.py
cursorpipe_server/: __init__.py  __main__.py  app.py  routes.py  schemas.py
docker/: index.html
docs/: api-reference.md  architecture.md  configuration.md  cursor-api-key.md  docker.md  examples.md  getting-started.md  index.md  server.md  testing.md  v1-vs-v2.md
docs/v2/: api.md  config.md  index.md  limitations.md  thinking.md
examples/: api_key_auth.py  basic.py  chainlit_pattern.py  index.html  model_switching.py  multi_turn.py  openai_sdk.py  session_streaming.py  streaming.py  warmup.py
getting-started/: index.html
search/: search_index.json
server/: index.html
testing/: index.html
tests/: conftest.py  test_integration.py  test_preflight.py  test_unit.py
v1-vs-v2/: index.html
v2/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  index.html  pyproject.toml
v2/api/: index.html
v2/config/: index.html
v2/cursorpipe/: __init__.py  _client.py  _config.py  _session_store.py
v2/cursorpipe_server/: __init__.py  __main__.py  app.py  errors.py  middleware.py  schemas.py
v2/cursorpipe_server/routes/: completions.py  health.py  models.py  sessions.py
v2/examples/: basic.py  langchain.py  openai_sdk.py  stateful.py  streaming.py  thinking.py
v2/limitations/: index.html
v2/tests/: conftest.py  test_integration.py  test_langchain_compat.py  test_server.py  test_unit.py
v2/thinking/: index.html
