[project]
name = "cursorpipe"
version = "0.1.0"
description = "Async Python client for the Cursor Agent CLI — pipe prompts to frontier LLMs via ACP with persistent sessions, streaming, and per-call model selection."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["cursor", "llm", "acp", "agent", "cli", "async", "streaming"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.10.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cursorpipe"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "preflight: validates prerequisites (agent binary, auth, connectivity)",
    "integration: requires a running Cursor agent (slow, needs auth)",
    "unit: fast tests with no external dependencies",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.8",
]
