[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cursorpipe"
version = "2.0.6"
description = "OpenAI-compatible HTTP server powered by the official Cursor SDK"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cursor-sdk",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sse-starlette>=2.0.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
]

[project.scripts]
cursorpipe-server = "cursorpipe_server.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["cursorpipe", "cursorpipe_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: fast offline tests, no network",
    "integration: real SDK/API calls, requires CURSOR_API_KEY",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
